# free-simple-media-organizer

./: .gitignore  README.md  free-simple-media-organizer.code-workspace  pyproject.toml
free_simple_media_organizer/: create_new_db.py  db_settings.py  dialogdbsettings.py  dialognewdb.py  insert_files_to_db.py  main_window.py  main_window.pyw  mainwindow.py  mainwindow.pyw  test_gettext.py
free_simple_media_organizer/app_functions/: __init__.py  connect_sqlite.py  insert_media.py
free_simple_media_organizer/classes/: configappfile.py  preparefilelist.py
free_simple_media_organizer/database/: init.sql
free_simple_media_organizer/db/install/: 000.sql  001.sql
free_simple_media_organizer/functions/: check_path_new_database.py  get_hostname_user.py  getmimetype.py  preparefilelist.py
free_simple_media_organizer/gui/: gui_main_window.py  mainwindow.py
free_simple_media_organizer/locales/en/LC_MESSAGES/: base.po
free_simple_media_organizer/locales/pl/LC_MESSAGES/: base.po
free_simple_media_organizer/model/: db_core_model.py  db_models.py  db_orm_model.py
