[tool.poetry]
name = "free-simple-media-organizer"
version = "1.00.00"
description = "Darmowy prosty ogranizer plików multimedialnych napisany w Python"
authors = ["Mateusz Mocydlarz <mateusz.mocydlarz@bitmm.eu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "free_simple_media_organizer"}]

[tool.poetry.dependencies]
python = "^3.11"
python-magic-bin = { version = "^0.4.14", platform = "win32" }
python-magic = "^0.4.27"
filetype = "^1.2.0"
platformdirs = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
